--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,3 +1,11 @@
-<app-header></app-header>
-<app-breadcrumbs></app-breadcrumbs>
-<router-outlet></router-outlet>
+<div class="wrapper">
+    <app-menu></app-menu>
+    <div class="content-page">
+        <div class="content">
+            <app-header></app-header>
+            <app-breadcrumbs></app-breadcrumbs>
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+</div>
+
