--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -15,24 +15,24 @@
                 </div>
 
                 <!-- title-->
-                <h4 class="mt-0">Sign In</h4>
-                <p class="text-muted mb-4">Enter your email address and password to access account.</p>
+                <h4 class="mt-0">Inicio de sesión</h4>
+                <p class="text-muted mb-4">Ingresa tu correo electronico y contraseña para acceder.</p>
 
                 <!-- form -->
                 <form action="#">
                     <div class="form-group">
-                        <label for="emailaddress">Email address</label>
-                        <input class="form-control" type="email" id="emailaddress" required="" placeholder="Enter your email">
+                        <label for="emailaddress">Usuario</label>
+                        <input class="form-control" type="email" id="emailaddress" required="" placeholder="Ingresa tu correo">
                     </div>
                     <div class="form-group">
-                        <a href="pages-recoverpw-2.html" class="text-muted float-right"><small>Forgot your password?</small></a>
-                        <label for="password">Password</label>
-                        <input class="form-control" type="password" required="" id="password" placeholder="Enter your password">
+                        <!-- <a href="pages-recoverpw-2.html" class="text-muted float-right"><small>Forgot your password?</small></a> -->
+                        <label for="password">Contraseña</label>
+                        <input class="form-control" type="password" required="" id="password" placeholder="Ingresa tu contraseña">
                     </div>
                     <div class="form-group mb-3">
                         <div class="custom-control custom-checkbox">
                             <input type="checkbox" class="custom-control-input" id="checkbox-signin">
-                            <label class="custom-control-label" for="checkbox-signin">Remember me</label>
+                            <label class="custom-control-label" for="checkbox-signin">Recordarme</label>
                         </div>
                     </div>
                     <div class="form-group mb-0 text-center">
@@ -61,15 +61,18 @@
 
                 <!-- Footer-->
                 <footer class="footer footer-alt">
-                    <p class="text-muted">Don't have an account? <a href="pages-register-2.html" class="text-muted ml-1"><b>Sign Up</b></a></p>
+                    <p class="text-muted">No tengo una cuenta? <a href="pages-register-2.html" class="text-muted ml-1"><b>Comunicarme con el colegio.</b></a></p>
                 </footer>
 
-            </div> <!-- end .card-body -->
-        </div> <!-- end .align-items-center.d-flex.h-100-->
+            </div>
+            <!-- end .card-body -->
+        </div>
+        <!-- end .align-items-center.d-flex.h-100-->
     </div>
     <!-- end auth-fluid-form-box-->
 
     <!-- Auth fluid right content -->
+
     <div class="auth-fluid-right text-center">
         <div class="auth-user-testimonial">
             <h2 class="mb-3">I love the color!</h2>
@@ -78,9 +81,11 @@
             <p>
                 - Hyper Admin User
             </p>
-        </div> <!-- end auth-user-testimonial-->
+        </div>
+
     </div>
+
+
     <!-- end Auth fluid right content -->
 </div>
 <!-- end auth-fluid-->
-
