--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -36,7 +36,7 @@
                 </a>
                 <ul class="side-nav-second-level" aria-expanded="false">
                     <li>
-                        <a href="dashboard-analytics.html">Analytics</a>
+                        <a [routerLink]="['/']">Analytics</a>
                     </li>
                     <li>
                         <a href="dashboard-crm.html">CRM</a>
