--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -22,7 +22,7 @@
                 <form action="#">
                     <div class="form-group">
                         <label for="emailaddress">Email address</label>
-                        <input class="form-control" type="email" id="emailaddress" required="" placeholder="Enter your email">
+                        <input class="form-control" type="email"  id="emailaddress" required="" placeholder="Enter your email">
                     </div>
                     <div class="form-group">
                         <a href="pages-recoverpw-2.html" class="text-muted float-right"><small>Forgot your password?</small></a>
@@ -36,7 +36,7 @@
                         </div>
                     </div>
                     <div class="form-group mb-0 text-center">
-                        <button class="btn btn-primary btn-block" type="submit"><i class="mdi mdi-login"></i> Log In </button>
+                        <button class="btn btn-primary btn-block" type="submit" (click)="login()"><i class="mdi mdi-login"></i> Log In </button>
                     </div>
                     <!-- social-->
                     <div class="text-center mt-4">
