--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -36,7 +36,7 @@
                         </div>
                     </div>
                     <div class="form-group mb-0 text-center">
-                        <button class="btn btn-primary btn-block" type="submit"><i class="mdi mdi-login"></i> Log In </button>
+                        <button class="btn btn-primary btn-block" type="submit" (click)="login()"><i class="mdi mdi-login"></i> Log In </button>
                     </div>
                     <!-- social-->
                     <div class="text-center mt-4">
