modulo mensajes, modulo notas

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -19,15 +19,15 @@
                 <p class="text-muted mb-4">Ingresa tu correo electronico y contraseña para acceder.</p>
 
                 <!-- form -->
-                <form action="#">
+                <form [formGroup]="loginForm">
                     <div class="form-group">
                         <label for="emailaddress">Usuario</label>
-                        <input class="form-control" type="email" id="emailaddress" required="" placeholder="Ingresa tu correo">
+                        <input class="form-control" type="email" formControlName="user" placeholder="Ingresa tu correo">
                     </div>
                     <div class="form-group">
                         <!-- <a href="pages-recoverpw-2.html" class="text-muted float-right"><small>Forgot your password?</small></a> -->
                         <label for="password">Contraseña</label>
-                        <input class="form-control" type="password" required="" id="password" placeholder="Ingresa tu contraseña">
+                        <input class="form-control" formControlName="password" type="password" placeholder="Ingresa tu contraseña">
                     </div>
                     <div class="form-group mb-3">
                         <div class="custom-control custom-checkbox">
@@ -36,34 +36,11 @@
                         </div>
                     </div>
                     <div class="form-group mb-0 text-center">
-                        <button class="btn btn-primary btn-block" type="submit" (click)="login()"><i class="mdi mdi-login"></i> Log In </button>
-                    </div>
-                    <!-- social-->
-                    <div class="text-center mt-4">
-                        <p class="text-muted font-16">Sign in with</p>
-                        <ul class="social-list list-inline mt-3">
-                            <li class="list-inline-item">
-                                <a href="javascript: void(0);" class="social-list-item border-primary text-primary"><i class="mdi mdi-facebook"></i></a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="javascript: void(0);" class="social-list-item border-danger text-danger"><i class="mdi mdi-google"></i></a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="javascript: void(0);" class="social-list-item border-info text-info"><i class="mdi mdi-twitter"></i></a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="javascript: void(0);" class="social-list-item border-secondary text-secondary"><i class="mdi mdi-github-circle"></i></a>
-                            </li>
-                        </ul>
+                        <button [disabled]="!loginForm.valid" class="btn btn-primary btn-block" type="submit" (click)="login()"><i class="mdi mdi-login"></i> Log In </button>
                     </div>
                 </form>
                 <!-- end form-->
-
-                <!-- Footer-->
-                <footer class="footer footer-alt">
-                    <p class="text-muted">No tengo una cuenta? <a href="pages-register-2.html" class="text-muted ml-1"><b>Comunicarme con el colegio.</b></a></p>
-                </footer>
-
+                <div *ngIf="error" class="invalid-feedback text-center" style="display: block; margin-top: 2em;">{{error}}</div>
             </div>
             <!-- end .card-body -->
         </div>
