--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -5,7 +5,7 @@
 
 // Color system
 
-$white:    #fafbfe !default;
+$white:    #fff !default;
 $gray-100: #f8f9fa !default;
 $gray-200: #eef2f7 !default;
 $gray-300: #dee2e6 !default;
