--- a/src/app/pages/message/message.component.html
+++ b/src/app/pages/message/message.component.html
@@ -1,1 +1,209 @@
-<p>message works!</p>
+<div class="content">
+
+    <!-- Start Content-->
+    <div class="container-fluid">
+      
+        <div class="row">
+
+            <!-- Right Sidebar -->
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-body">
+                        <!-- Left sidebar -->
+                        <div class="page-aside-left">
+
+                            <button type="button" class="btn btn-danger btn-block" data-toggle="modal" data-target="#compose-modal">Compose</button>
+
+                            <div class="email-menu-list mt-3">
+                                <a (click)="inbox()" class="text-danger font-weight-bold"><i class="dripicons-inbox mr-2"></i>Inbox<span class="badge badge-danger-lighten float-right ml-2">7</span></a>
+                                <a (click)="sentMail()"><i class="dripicons-exit mr-2"></i>Sent Mail</a>
+                            </div>
+
+                        </div>
+                        <!-- End Left sidebar -->
+
+                        <div class="page-aside-right">
+                            
+                            <div class="mt-3" *ngIf="!loadedMessage">
+                                <app-pagination  (page)="setPage($event)" [size]="20" [lengt]="messagesCount" [reset]="0"></app-pagination>
+                                <ul class="email-list">
+                                    <li *ngFor="let message of messages"class="unread">
+                                        <div (click)="loadMessage(message)">
+                                            <div class="email-sender-info">
+                                                <div class="checkbox-wrapper-mail">
+                                                    <div class="custom-control custom-checkbox">
+                                                        <input type="checkbox" class="custom-control-input" id="mail1">
+                                                        <label class="custom-control-label" for="mail1"></label>
+                                                    </div>
+                                                </div>
+                                                <span class="star-toggle mdi mdi-star-outline text-warning"></span>
+                                                <a *ngIf="message.user" class="email-title"><span *ngIf="!inboxtype"> Para: </span>{{ message.user.name }} {{ message.user.lastname }}</a>
+                                            </div>
+                                            <div class="email-content">
+                                                <a class="email-subject">{{ message.subject }}</a>
+                                                <div class="email-date">{{ message.createdAt }}</div>
+                                            </div>
+                                        </div>
+                                        <div class="email-action-icons">
+                                            <ul class="list-inline">
+                                                <li class="list-inline-item">
+                                                    <a href="javascript: void(0);"><i class="mdi mdi-delete email-action-icons-item"></i></a>
+                                                </li>
+                                                <li class="list-inline-item">
+                                                    <a href="javascript: void(0);"><i class="mdi mdi-email-open email-action-icons-item"></i></a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </li>
+                            
+                                </ul>
+                            </div>
+                            <!-- end .mt-4 -->
+
+                            <div class="mt-3" *ngIf="loadedMessage">
+                                <h5 class="font-18">{{ loadedMessage.subject }}</h5>
+
+                                <hr>
+
+                                <div class="media mb-3 mt-1">
+                                    <img class="d-flex mr-2 rounded-circle" src="assets/images/users/avatar-2.jpg" alt="placeholder image" height="32">
+                                    <div class="media-body">
+                                        <small class="float-right">{{ loadedMessage.createdAt }}</small>
+                                        <h6 *ngIf="enviado" class="m-0 font-14">{{ loadedMessage.user.name }} {{ loadedMessage.user.lastname }}</h6>
+                                        <h6 *ngIf="!enviado" class="m-0 font-14">{{ user.name }} {{ user.lastname }}</h6>
+                                        <small *ngIf="!enviado" class="text-muted">From: {{ loadedMessage.user.name }} {{ loadedMessage.user.lastname }}</small>
+                                    </div>
+                                </div>
+
+                                <p>{{ loadedMessage.text }}</p>
+                            
+                                <h5 class="mb-3">Attachments</h5>
+
+                                <div class="row">
+                                    <div class="col-xl-4">
+                                        <div class="card mb-1 shadow-none border">
+                                            <div class="p-2">
+                                                <div class="row align-items-center">
+                                                    <div class="col-auto">
+                                                        <div class="avatar-sm">
+                                                            <span class="avatar-title bg-primary-lighten text-primary rounded">
+                                                                .ZIP
+                                                            </span>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col pl-0">
+                                                        <a href="javascript:void(0);" class="text-muted font-weight-bold">Hyper-admin-design.zip</a>
+                                                        <p class="mb-0">2.3 MB</p>
+                                                    </div>
+                                                    <div class="col-auto">
+                                                        <!-- Button -->
+                                                        <a href="javascript:void(0);" class="btn btn-link btn-lg text-muted">
+                                                            <i class="dripicons-download"></i>
+                                                        </a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div> <!-- end col -->
+                                    <div class="col-xl-4">
+                                        <div class="card mb-1 shadow-none border">
+                                            <div class="p-2">
+                                                <div class="row align-items-center">
+                                                    <div class="col-auto">
+                                                        <img src="assets/images/users/avatar-2.jpg" class="avatar-sm rounded" alt="file-image">
+                                                    </div>
+                                                    <div class="col pl-0">
+                                                        <a href="javascript:void(0);" class="text-muted font-weight-bold">Dashboard-design.jpg</a>
+                                                        <p class="mb-0">3.25 MB</p>
+                                                    </div>
+                                                    <div class="col-auto">
+                                                        <!-- Button -->
+                                                        <a href="javascript:void(0);" class="btn btn-link btn-lg text-muted">
+                                                            <i class="dripicons-download"></i>
+                                                        </a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div> <!-- end col -->
+                                    <div class="col-xl-4">
+                                        <div class="card mb-0 shadow-none border">
+                                            <div class="p-2">
+                                                <div class="row align-items-center">
+                                                    <div class="col-auto">
+                                                        <div class="avatar-sm">
+                                                            <span class="avatar-title bg-secondary rounded">
+                                                                .MP4
+                                                            </span>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col pl-0">
+                                                        <a href="javascript:void(0);" class="text-muted font-weight-bold">Admin-bug-report.mp4</a>
+                                                        <p class="mb-0">7.05 MB</p>
+                                                    </div>
+                                                    <div class="col-auto">
+                                                        <!-- Button -->
+                                                        <a href="javascript:void(0);" class="btn btn-link btn-lg text-muted">
+                                                            <i class="dripicons-download"></i>
+                                                        </a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div> <!-- end col -->
+                                </div>
+                                <!-- end row-->
+                                
+                                <div class="mt-5">
+                                    <a href="" class="btn btn-secondary mr-2"><i class="mdi mdi-reply mr-1"></i> Reply</a>
+                                    <a href="" class="btn btn-light">Forward <i class="mdi mdi-forward ml-1"></i></a>
+                                </div>
+
+                            </div>
+                           
+                            <!-- end row-->
+                        </div> 
+                        <!-- end inbox-rightbar-->
+                    </div>
+                    <!-- end card-body -->
+                    <div class="clearfix"></div>
+                </div> <!-- end card-box -->
+
+            </div> <!-- end Col -->
+        </div><!-- End row -->
+        
+    </div> <!-- container -->
+
+</div> <!-- content -->
+
+
+<!-- Compose Modal -->
+<div id="compose-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="compose-header-modalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header modal-colored-header bg-primary">
+                <h4 class="modal-title" id="compose-header-modalLabel">New Message</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+            </div>
+            <div class="modal-body p-3">
+                <form class="p-1">
+                    <div class="form-group mb-2">
+                        <label for="msgto">To</label>
+                        <input type="text" id="msgto" class="form-control" placeholder="example@email.com">
+                    </div>
+                    <div class="form-group mb-2">
+                        <label for="mailsubject">Subject</label>
+                        <input type="text" id="mailsubject" class="form-control" placeholder="your subject">
+                    </div>
+                    <div class="form-group write-mdg-box mb-3">
+                        <label>Message</label>
+                        <textarea id="simplemde1"></textarea>
+                    </div>
+
+                    <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="mdi mdi-send mr-1"></i> Send Message</button>
+                    <button type="button" class="btn btn-light" data-dismiss="modal">Cancel</button>
+                </form>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
