--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -24,46 +24,37 @@
                 <div class="card-body">
                     <img src="assets/images/users/avatar-1.jpg" class="rounded-circle avatar-lg img-thumbnail" alt="profile-image">
 
-                    <h4 class="mb-0 mt-2">Dominic Keller</h4>
-                    <p class="text-muted font-14">Founder</p>
+                    <h4 class="mb-0 mt-2">{{ user.name }} {{ user.lastname }}</h4>
+                    <p class="text-muted font-14">{{ user.rol.name }}</p>
 
-                    <button type="button" class="btn btn-success btn-sm mb-2">Follow</button>
-                    <button type="button" class="btn btn-danger btn-sm mb-2">Message</button>
+                    <button type="button" class="btn btn-success btn-sm mb-2">Message</button>
 
                     <div class="text-left mt-3">
-                        <h4 class="font-13 text-uppercase">About Me :</h4>
-                        <p class="text-muted font-13 mb-3">
-                            Hi I'm Johnathn Deo,has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type.
+                        <p class="text-muted mb-2 font-13">
+                            <strong>Full Name :</strong> 
+                            <span class="ml-2">{{ user.name }} {{ user.lastname }}</span>
                         </p>
-                        <p class="text-muted mb-2 font-13"><strong>Full Name :</strong> <span class="ml-2">Geneva
-                                            D. McKnight</span></p>
 
-                        <p class="text-muted mb-2 font-13"><strong>Mobile :</strong><span class="ml-2">(123)
-                                            123 1234</span></p>
+                        <p class="text-muted mb-2 font-13">
+                            <strong>Telefono :</strong>
+                            <span class="ml-2">{{ user.phone }}</span>
+                        </p>
 
-                        <p class="text-muted mb-2 font-13"><strong>Email :</strong> <span class="ml-2 ">user@email.domain</span></p>
+                        <p class="text-muted mb-2 font-13">
+                            <strong>Email :</strong>
+                            <span class="ml-2 ">{{ user.email }}</span>
+                        </p>
 
-                        <p class="text-muted mb-1 font-13"><strong>Location :</strong> <span class="ml-2">USA</span></p>
+                        <p class="text-muted mb-1 font-13">
+                            <strong>Tipo de documento :</strong> 
+                            <span class="ml-2">{{ user.documentType.name }}</span>
+                        </p>
+
+                        <p class="text-muted mb-1 font-13">
+                            <strong>Numero de documento :</strong> 
+                            <span class="ml-2">{{ user.document_number }}</span>
+                        </p>
                     </div>
-
-                    <ul class="social-list list-inline mt-3 mb-0">
-                        <li class="list-inline-item">
-                            <a href="javascript: void(0);" class="social-list-item border-primary text-primary"><i
-                                                class="mdi mdi-facebook"></i></a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="javascript: void(0);" class="social-list-item border-danger text-danger"><i
-                                                class="mdi mdi-google"></i></a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="javascript: void(0);" class="social-list-item border-info text-info"><i
-                                                class="mdi mdi-twitter"></i></a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="javascript: void(0);" class="social-list-item border-secondary text-secondary"><i
-                                                class="mdi mdi-github-circle"></i></a>
-                        </li>
-                    </ul>
                 </div>
                 <!-- end card-body -->
             </div>
