--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,9 @@
 }
 
 .arrow-none:after{display:none}
+
+.page-aside-right {
+    margin: -1.5rem 0 -1.5rem 250px;
+    border-left: 5px solid #fafbfe;
+    padding: 1.5rem 0 1.5rem 25px;
+}
