--- a/src/app/pages/message/message.component.html
+++ b/src/app/pages/message/message.component.html
@@ -2,7 +2,7 @@
 
     <!-- Start Content-->
     <div class="container-fluid">
-      
+        <app-breadcrumbs title="Mensajes"></app-breadcrumbs>
         <div class="row">
 
             <!-- Right Sidebar -->
