--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -37,17 +37,9 @@
                     <i class="dripicons-user"></i>
                     <span> Perfil </span>
                 </a>
-                <a class="side-nav-link" [routerLink]="['/schedule']">
-                    <i class="uil-clock"></i>
-                    <span> Horario </span>
-                </a>
-                <a class="side-nav-link" [routerLink]="['/calendar']">
-                    <i class="uil-calender"></i>
-                    <span> Calendario </span>
-                </a>
                 <a class="side-nav-link" [routerLink]="['/subject']">
-                    <i class="mdi mdi-message-processing-outline"></i>
-                    <span> Materias </span>
+                    <i class="mdi mdi-book-outline"></i>
+                    <span> Notas </span>
                 </a>
                 <a class="side-nav-link" [routerLink]="['/message']">
                     <i class="mdi mdi-message-processing-outline"></i>
@@ -55,61 +47,11 @@
                     <span class="badge badge-danger float-right">4</span>
                     <span> Mensajes </span>
                 </a>
-
-
-            </li>
-
-            <li class="side-nav-title side-nav-item">Apps</li>
-
-            <li class="side-nav-item">
-                <a href="apps-calendar.html" class="side-nav-link">
-                    <i class="uil-calender"></i>
-                    <span> Calendar </span>
+                <a class="side-nav-link" [routerLink]="['/datebook']">
+                    <i class="mdi mdi-message-processing-outline"></i>
+                    <span> Agenda </span>
                 </a>
             </li>
-
-            <li class="side-nav-item">
-                <a href="apps-chat.html" class="side-nav-link">
-                    <i class="uil-comments-alt"></i>
-                    <span> Chat </span>
-                </a>
-            </li>
-
-            <li class="side-nav-item">
-                <a href="" class="side-nav-link">
-                    <i class="uil-store"></i>
-                    <span> Ecommerce </span>
-                    <span class="menu-arrow"></span>
-                </a>
-                <ul class="side-nav-second-level" aria-expanded="false">
-                    <li>
-                        <a href="apps-ecommerce-products.html">Products</a>
-                    </li>
-                    <li>
-                        <a href="apps-ecommerce-products-details.html">Products Details</a>
-                    </li>
-                    <li>
-                        <a href="apps-ecommerce-orders.html">Orders</a>
-                    </li>
-                    <li>
-                        <a href="apps-ecommerce-orders-details.html">Order Details</a>
-                    </li>
-                    <li>
-                        <a href="apps-ecommerce-customers.html">Customers</a>
-                    </li>
-                    <li>
-                        <a href="apps-ecommerce-shopping-cart.html">Shopping Cart</a>
-                    </li>
-                    <li>
-                        <a href="apps-ecommerce-checkout.html">Checkout</a>
-                    </li>
-                    <li>
-                        <a href="apps-ecommerce-sellers.html">Sellers</a>
-                    </li>
-                </ul>
-            </li>
-
-
 
         </ul>
 
