--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,59 +1,65 @@
 <!-- Start Content-->
 <div class="container-fluid">
 
-    <!-- start page title -->
-    <div class="row">
-        <div class="col-12">
-            <div class="page-title-box">
-                <div class="page-title-right">
-                    <ol class="breadcrumb m-0">
-                        <li class="breadcrumb-item"><a href="javascript: void(0);">Hyper</a></li>
-                        <li class="breadcrumb-item"><a href="javascript: void(0);">Pages</a></li>
-                        <li class="breadcrumb-item active">Profile 2</li>
-                    </ol>
-                </div>
-                <h4 class="page-title">Profile 2</h4>
-            </div>
-        </div>
-    </div>
-    <!-- end page title -->
+    <app-breadcrumbs title="Perfil"></app-breadcrumbs>
 
     <div class="row">
-        <div class="col-xl-5 col-lg-6">
-            <div class="card text-center">
+        <div class="col-4">
+            <div class="card">
                 <div class="card-body">
-                    <img src="assets/images/users/avatar-1.jpg" class="rounded-circle avatar-lg img-thumbnail" alt="profile-image">
+                    <div class="media">
+                        <img class="d-flex align-self-start rounded mr-3" src="assets/images/users/avatar-5.jpg" alt="Dominic Keller" height="70">
+                        <div class="media-body">
+                            <p class="mt-1 mb-0 text-dark font-size-h4">{{ user.name }} {{ user.lastname }}</p>
+                            <span class="mb-1 mt-1 text-gray-light">Estudiante</span>
+                        </div>
+                    </div>
+                    <div class="mt-4">
+            
+                        <p><span class="text-dark">Telefono :</span> <span class="ml-2">{{ user.phone }}</span></p>
 
-                    <h4 class="mb-0 mt-2">{{ user.name }} {{ user.lastname }}</h4>
-                    <p class="text-muted font-14">{{ user.rol.name }}</p>
+                        <p><span class="text-dark">Email :</span> <span class="ml-2">{{ user.email }}</span></p>
 
-                    <button type="button" class="btn btn-success btn-sm mb-2">Message</button>
+                        <p><span class="text-dark">Movil :</span> <span class="ml-2">{{ user.movil }}</span></p>
 
-                    <div class="text-left mt-3">
-                        <p class="text-muted mb-2 font-13">
-                            <strong>Full Name :</strong> 
-                            <span class="ml-2">{{ user.name }} {{ user.lastname }}</span>
-                        </p>
+                        <p><span class="text-dark">Dirrección :</span> <span class="ml-2">{{ user.address }}</span></p>
 
-                        <p class="text-muted mb-2 font-13">
-                            <strong>Telefono :</strong>
-                            <span class="ml-2">{{ user.phone }}</span>
-                        </p>
+                        <p><span class="text-dark">Fecha de nacimiento :</span> <span class="ml-2">{{ user.birthdate }}</span></p>
 
-                        <p class="text-muted mb-2 font-13">
-                            <strong>Email :</strong>
-                            <span class="ml-2 ">{{ user.email }}</span>
-                        </p>
+                        <p><span class="text-dark">Tipo de documento :</span> <span class="ml-2">{{ user.documentType }}</span></p>
 
-                        <p class="text-muted mb-1 font-13">
-                            <strong>Tipo de documento :</strong> 
-                            <span class="ml-2">{{ user.documentType.name }}</span>
-                        </p>
+                        <p><span class="text-dark">Numero de documento :</span> <span class="ml-2">{{ user.documentNumber }}</span></p>
 
-                        <p class="text-muted mb-1 font-13">
-                            <strong>Numero de documento :</strong> 
-                            <span class="ml-2">{{ user.document_number }}</span>
-                        </p>
+                    </div>
+            
+                </div>
+                <!-- end card-body -->
+            </div>
+            <!-- end card -->
+
+        </div>
+        <div class="col-4">
+            <div class="card">
+                <div class="card-body">
+                    <div class="media">
+                        <img class="d-flex rounded mr-3" src="assets/images/users/avatar-1.jpg" alt="Dominic Keller" height="70">
+                        <div class="media-body">
+                            <p class="mt-1 mb-0 text-dark font-size-h4">Camilo Lopez</p>
+                            <span class="mb-1 mt-1 text-gray-light">Acudiente</span>
+                        </div>
+                    </div>
+                    <div class="mt-4">
+            
+                        <p><span class="text-dark">Telefono :</span> <span class="ml-2">{{ user.phone }}</span></p>
+
+                        <p><span class="text-dark">Email :</span> <span class="ml-2">{{ user.email }}</span></p>
+
+                        <p><span class="text-dark">Movil :</span> <span class="ml-2">{{ user.movil }}</span></p>
+
+                        <p><span class="text-dark">Dirrección :</span> <span class="ml-2">{{ user.address }}</span></p>
+
+                        <p><span class="text-dark">Numero de documento :</span> <span class="ml-2">{{ user.documentNumber }}</span></p>
+
                     </div>
                 </div>
                 <!-- end card-body -->
@@ -61,57 +67,16 @@
             <!-- end card -->
 
         </div>
-        <!-- end col-->
-
-        <div class="col-xl-7 col-lg-6">
-            <div class="card">
+        <div class="col-4">
+            <div class="card text-center">
                 <div class="card-body">
-                    <ul class="nav nav-pills bg-nav-pills nav-justified mb-3">
-                        <li class="nav-item">
-                            <a href="#aboutme" data-toggle="tab" aria-expanded="false" class="nav-link rounded-0">
-                                            Maestros
-                                        </a>
-                        </li>
-
-                    </ul>
-                    <div class="card bg-dark">
-                        <div class="card-body profile-user-box">
-
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <div class="media">
-                                        <span class="float-left m-2 mr-4"><img src="https://www.col40.co/638/articles-103668_perfil.png" style="height: 100px;" alt="" class="rounded-circle img-thumbnail"></span>
-                                        <div class="media-body">
-
-                                            <h4 class="mt-1 mb-1 text-white">Cristian Ardila</h4>
-                                            <p class="font-13 text-white-50">Maestro de siencias sociales</p>
-
-                                            <ul class="mb-0 list-inline text-light">
-                                                <li class="list-inline-item mr-3">
-                                                    <h5 class="mb-1">317 3049586</h5>
-                                                    <p class="mb-0 font-13 text-white-50">Numero de contacto</p>
-                                                </li>
-
-                                            </ul>
-                                        </div>
-                                        <!-- end media-body-->
-                                    </div>
-                                </div>
-                                <!-- end col-->
-
-                            </div>
-                            <!-- end row -->
-
-                        </div>
-                        <!-- end card-body/ profile-user-box-->
-                    </div>
-                    <!--end profile/ card -->
+                    
                 </div>
-                <!-- end card body -->
+                <!-- end card-body -->
             </div>
             <!-- end card -->
+
         </div>
-        <!-- end col -->
     </div>
     <!-- end row-->
 
