--- a/src/app/shared/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/shared/breadcrumbs/breadcrumbs.component.html
@@ -1,1 +1,16 @@
-<h2>{{ title }}</h2>
+<!-- start page title -->
+<div class="row">
+    <div class="col-12">
+        <div class="page-title-box">
+            <div class="page-title-right">
+                <ol class="breadcrumb m-0">
+                    <li class="breadcrumb-item"><a href="javascript: void(0);">Hyper</a></li>
+                    <li class="breadcrumb-item"><a href="javascript: void(0);">Pages</a></li>
+                    <li class="breadcrumb-item active">Profile 2</li>
+                </ol>
+            </div>
+            <h2 class="title-page text-dark font-weight-bold">{{ title }}</h2>
+        </div>
+    </div>
+</div>
+<!-- end page title -->
